--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "swiper": "^6.8.4",
     "vue": "^3.0.0",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.0-0",
+    "vue-sweetalert2": "^5.0.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
