--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "swiper": "^6.8.4",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.1",
